--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
         .navigation-logo {
             float: left;
-            background: url(http://graphics8.nytimes.com/newsgraphics/2013/10/27/south-china-sea/d4ddc253fb0e8783d3e57b3c5a189fcd2af63c5b/icons.png) 0 -6px;
+            background: url(assets/icons.png) 0 -6px;
             height: 17px;
             margin: 11px 0 0 0;
             width: 199px;
@@ -487,7 +487,7 @@
         .navigation-icon {
             width: 18px;
             height: 18px;
-            background-image: url(http://graphics8.nytimes.com/newsgraphics/2013/10/27/south-china-sea/d4ddc253fb0e8783d3e57b3c5a189fcd2af63c5b/icons.png);
+            background-image: url(assets/icons.png);
         }
 
         .navigation-share--twitter .navigation-icon { background-position: -6px -28px; }
@@ -503,21 +503,11 @@
     </style>
     <div class="navigation">
         <div class="navigation-left">
-            <!--         <a class="navigation-logo" href="http://www.nytimes.com/pages/magazine/index.html" alt="The New York Times Magazine"></a> -->
+            <!--         <a class="navigation-logo" href="http://www.turning21.org" alt="Turn21"></a> -->
             <a class="navigation-headline" href="#">Turn21</a>
         </div>
         <div class="navigation-right">
             <a href="#" class="navigation-volume"><div class="navigation-icon"></div></a>
-            <!--         <div class="navigation-sections">
-<a href="#1" class="navigation-section" title="The Salmon Game">1</a>
-<a href="#2" class="navigation-section" title="How To Run The Lesson">2</a>
-<a href="#3" class="navigation-section" title="A Single Mother Coho">3</a>
-<a href="#4" class="navigation-section" title="A Computational Simulation">4</a>
-<a href="#5" class="navigation-section" title="Discrepant Events, Explanations and Arguments">5</a>
-<a href="#6" class="navigation-section" title="Background Information">6</a>
-<a href="#7" class="navigation-section" title="Supporting Material">7</a>
-<a href="#8" class="navigation-section" title="Share This Lesson">8</a>
-</div> -->
             <div class="navigation-shares">
                 <a href="#" class="navigation-share navigation-share--facebook"><div class="navigation-icon"></div></a>
                 <a href="#" class="navigation-share navigation-share--twitter"><div class="navigation-icon"></div></a>
@@ -627,37 +617,8 @@
                               <br><br> Take action today at <a href='http://www.turn21.org'>turn21.org</a>.</div>
                         </div>
 
-                    </div>
-                    <div class="section column" style="margin:50px auto;">
-                        <div class="headline">Turn21</div>
-                        <div class="byline-rule"></div>
-                        <div class="byline byline--first">By <span class="author">Turn21.org</span><br>Photographs and video by <span class="author">Turn21.org</span></div>
-                        <div class="byline">Produced by <span class="author"></span>, <span class="author"></span></div>
-                    </div>
+                    </div><!-- Video Sequence -->
 
-                    <div class="intro">
-                        <div class="columnLeft">
-                        </div>
-                        <div class="columnRight" style="width:401px;">
-
-                        </div>
-                        <div class="endOfColumns"></div>
-
-                        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-                        <a class="navigation-marker" id="8"></a>
-
-                        <div class="chapter">
-                            <div class="chapterHeader"><span>Share This: Let's Turn 21 Together</span></div>
-
-
-                            <div class="columnLeft">
-                            </div>
-                            <div class="columnRight" style="width:401px;">
-
-
-                            </div>
-                            <div class="endOfColumns"></div>
-                        </div> <!-- Chapter -->
                     </div> <!-- Article -->
                 </div> <!-- Main -->
 
@@ -759,6 +720,7 @@
 
     function loaded() {
         video.attr("preload", function(d) { return d.first ? "auto" : "none"; });
+        d3.selectAll('video').property('volume',0);
     }
 
     function muted() {
