--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             <div class="main">
                 <div class="article">
                     <div class="section video-sequence" data-audio="intro">
-                        <div class="video" data-video="EarthSlowNoSun">
+                        <div class="video" data-video="EarthSlowNosun">
                             <a class="navigation-marker" id="1"></a>
                             <div class="video-container">
                             </div>
@@ -588,7 +588,7 @@
                             <div class="video-caption video-caption--right">Now we’ve started to talk about ‘sustainable’. ‘Sustainable’ would be living on the energy of the sun as it comes to us year by year.</div>
                         </div>
 
-                        <div class="video" data-video="EarthSlowsun" data-animation>
+                        <div class="video" data-video="EarthSlowSun" data-animation>
                             <div class="video-container">
                                 <div class="video-source"></div>
                             </div>
