--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//piwik.turning21.io:8080/";
+    var u="//piwik.turning21.io/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', 4]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//piwik.turning21.io:8080/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="//piwik.turning21.io/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 
         <title>Turn21 - Let's Turn 21 Together - Turn21.org</title>
